--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h1 class="fontsize"> Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                     </div>
                     <div class="subcontenitore2">
-                        <div class="subcontenitore3">
+                        <div >
                              <p> Finalmente tutti i tuoi strumenti, contenuti e  collaboratori sono accessibili dallo stesso posto.Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                             </p>
                             <button class="btn2">Inizia la tua prova gratuita</button>
@@ -48,8 +48,31 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <!-- finejumbo -->
+             <!-- terza parte -->
+            <div class="contenitore2">
+                <div class="subcontenitore3">
+                    <h2 class="fontsize">Trova il piano business che fa per te</h2>
+                    <div class="radio">
+                        <span><input type="radio"></span>fatturazione mensile
+                        <span><input type="radio"> fatturazione annuale</span>
+                    </div>
+                </div>
+            </div>
+            <div class="contenitorepadre">
+                <div class="figlio1">
+                    <div class="figlio2">
+                        <div class="figlio3">
+
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
+
+            
 
          </main>
                     
