--- a/index.html
+++ b/index.html
@@ -73,30 +73,43 @@
         </div>
         <div class="contenitorepadre">
             <div class="figlio1">
-                <div class="intestazione"><i class="fa-solid fa-user"></i> singolo</div>
+                <div class="intestazione">
+                    <i class="fa-solid fa-user"></i> singolo
+                </div>
                 <div class="contenuto">
 
                     <h4>professional</h4>
                     <span>12&euro;</span>
-                    <div class="crgrey">/ mese</div>
+                    <div class="crgrey">/ mese
+                    </div>
                     <ul class="lista2">
                         <li class="user"><i class="fa-solid fa-user"></i>1 utente</li>
                         <li class="user"> <i class="fa-solid fa-folder"></i>5 tb di spazio di archiviazione sicuro</li>
                         <li class="user"><i class="fa-solid fa-share-nodes"></i>funzioni di produttività premium e
                             condivisione file semplice e sicura</li>
                     </ul>
-                    <div class="larghezzabottone"><button class="bgblue user">prova gratis per 30 giorni</button></div>
-                    <div class="user">oppure <a href="o" class="colblue">acquista ora</a></div>
+                    <div class="larghezzabottone">
+                        <button class="bgblue user">prova gratis per 30 giorni</button>
+                    </div>
+                    <div class="user">
+                        oppure <a href="o" class="colblue">acquista ora</a>
+                    </div>
                     <hr>
                     <div class="fontsize1"> punti salienti del piano</div>
-                    <div> <i class="fa-solid fa-check blu user"></i>invia file fino a 100GB con dropbox transfert</div>
-                    <div><i class="fa-solid fa-check blu user"></i>cartelle offline su dispositivi mobili</div>
+                    <div>
+                         <i class="fa-solid fa-check blu user"></i>invia file fino a 100GB con dropbox transfert
+                        </div>
+                    <div>
+                        <i class="fa-solid fa-check blu user"></i>cartelle offline su dispositivi mobili
+                    </div>
                 </div>
 
             </div>
 
             <div class="figlio2">
-                <div class="intestazione"><i class="fa-solid fa-people-group"></i></i> Team</div>
+                <div class="intestazione">
+                    <i class="fa-solid fa-people-group"></i> Team
+                </div>
                 <div class="contenuto">
 
                     <h4>Advanced</h4>
@@ -120,26 +133,40 @@
                 </div>
             </div>
             <div class="figlio2">
-                <div class="intestazione"><i class="fa-solid fa-user"></i> singolo</div>
+                <div class="intestazione">
+                    <i class="fa-solid fa-user"></i> singolo
+                </div>
                 <div class="contenuto">
 
                     <h4>professional</h4>
                     <span> Contattaci </span>
                     <div class="crgrey">-</div>
                     <ul class="lista2">
-                        <li class="user"><i class="fa-solid fa-user"></i>10 o più utenti</li>
-                        <li class="user"> <i class="fa-solid fa-folder"></i>soluzioni personalizzabili per la tua
-                            azienda</li>
+                        <li class="user">
+                            <i class="fa-solid fa-user"></i>10 o più utenti
+                        </li>
+                        <li class="user">
+                             <i class="fa-solid fa-folder"></i>soluzioni personalizzabili per la tua
+                            azienda
+                        </li>
                         <li class="user"><i class="fa-solid fa-share-nodes"></i>assistenza personalzzata per aiutare gli
                             amministratori in una gestione su larga scala</li>
                     </ul>
-                    <div class="larghezzabottone"><button class="bgblue user">prova gratis per 30 giorni</button></div>
-                    <div class="user">oppure <a href="o" class="colblue">acquista ora</a></div>
+                    <div class="larghezzabottone">
+                        <button class="bgblue user">prova gratis per 30 giorni</button>
+                    </div>
+                    <div class="user">oppure <a href="o" class="colblue">acquista ora</a>
+                    </div>
                     <hr>
                     <div class="fontsize1"> punti salienti del piano</div>
-                    <div> <i class="fa-solid fa-check blu user"></i>cartelle offline su dispositivi mobili</div>
-                    <div><i class="fa-solid fa-check blu user"></i>servizio assistenza 24/h</div>
-                    <div> <i class="fa-solid fa-check blu user"></i>possibilità di personalizzare totale</div>
+                    <div> <i class="fa-solid fa-check blu user"></i>cartelle offline su dispositivi mobili
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-check blu user"></i>servizio assistenza 24/h
+                    </div>
+                    <div> 
+                        <i class="fa-solid fa-check blu user"></i>possibilità di personalizzare totale
+                    </div>
                 </div>
             </div>
         </div>
