--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 </div>
                 <div> 
                     <h3>Dropbox</h3>
-                    <ul>
+                    <ul class="lista3">
                         <li>Applicazione desktop</li>
                         <li>perchè Dropbox</li>
                         <li>piani</li>
@@ -292,7 +292,7 @@
                 </div>
                 <div> 
                     <h3>Dropbox</h3>
-                    <ul>
+                    <ul class="lista3">
                         <li>Applicazione desktop</li>
                         <li>perchè Dropbox</li>
                         <li>piani</li>
@@ -302,7 +302,7 @@
                 </div>
                 <div> 
                     <h3>Dropbox</h3>
-                    <ul>
+                    <ul class="lista3">
                         <li>Applicazione desktop</li>
                         <li>perchè Dropbox</li>
                         <li>piani</li>
@@ -312,7 +312,7 @@
                 </div>
                 <div> 
                     <h3>Dropbox</h3>
-                    <ul>
+                    <ul class="lista3">
                         <li>Applicazione desktop</li>
                         <li>perchè Dropbox</li>
                         <li>piani</li>
@@ -322,7 +322,7 @@
                 </div>
                 <div> 
                     <h3>Dropbox</h3>
-                    <ul>
+                    <ul class="lista3">
                         <li>Applicazione desktop</li>
                         <li>perchè Dropbox</li>
                         <li>piani</li>
