--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     </ul>
                 </div>
                 <div> 
-                    <h3>Dropbox</h3>
+                    <h3>Prodotti</h3>
                     <ul class="lista3">
                         <li>Applicazione desktop</li>
                         <li>perchè Dropbox</li>
@@ -301,7 +301,7 @@
                     </ul>
                 </div>
                 <div> 
-                    <h3>Dropbox</h3>
+                    <h3>Azienda</h3>
                     <ul class="lista3">
                         <li>Applicazione desktop</li>
                         <li>perchè Dropbox</li>
@@ -311,7 +311,7 @@
                     </ul>
                 </div>
                 <div> 
-                    <h3>Dropbox</h3>
+                    <h3>Supporto</h3>
                     <ul class="lista3">
                         <li>Applicazione desktop</li>
                         <li>perchè Dropbox</li>
@@ -321,7 +321,7 @@
                     </ul>
                 </div>
                 <div> 
-                    <h3>Dropbox</h3>
+                    <h3>Comunity</h3>
                     <ul class="lista3">
                         <li>Applicazione desktop</li>
                         <li>perchè Dropbox</li>
